kubernetes/apps/it-tools/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: it-tools
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
